// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmationModal should be rendered correctly 1`] = `
<div
  className="container modalBlocker"
  style={
    Object {
      "zIndex": 1,
    }
  }
>
  <div
    aria-label="Click to close a modal"
    className="uui-modal-blocker"
    onClick={[Function]}
  />
  <div
    aria-modal={true}
    className="uui-modal-window root modal container"
    role="dialog"
    style={
      Object {
        "height": "auto",
        "maxHeight": "var(--uui-modals-max-height)",
        "width": 420,
      }
    }
  >
    <div
      className="root modalHeader borderBottom"
      style={Object {}}
    >
      <div
        className="uui-modal-title uui-typography"
      >
        Test
      </div>
      <div
        className="flexSpacer"
      />
      <div
        className="flexCell"
        style={
          Object {
            "alignSelf": undefined,
            "flexBasis": "auto",
            "flexGrow": undefined,
            "flexShrink": 0,
            "minWidth": 0,
            "textAlign": undefined,
          }
        }
      >
        <button
          aria-label="Close modal"
          className="uui-button-box uui-enabled -clickable container uui-icon_button uui-color-neutral root"
          onClick={[Function]}
          tabIndex={0}
          type="button"
        >
          <div
            className="container uui-icon uui-enabled"
            style={Object {}}
          >
            <svg
              className=""
            />
          </div>
        </button>
      </div>
    </div>
    <div
      className="root root uui-scroll-bars uui-shadow-top uui-shadow-bottom"
      style={
        Object {
          "display": "flex",
          "height": "100%",
          "overflow": "hidden",
          "position": "relative",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "WebkitOverflowScrolling": "touch",
            "bottom": 0,
            "flex": "1 1 auto",
            "left": 0,
            "marginBottom": 0,
            "marginRight": 0,
            "overflow": "scroll",
            "position": "relative",
            "right": 0,
            "top": 0,
          }
        }
      >
        <div
          className="uui-panel root margin-24 uui-surface-main container"
        >
          <div>
            Test content
          </div>
        </div>
      </div>
      <div
        className="uui-track-horizontal"
        style={
          Object {
            "display": "none",
            "height": 6,
            "position": "absolute",
          }
        }
      >
        <div
          className="uui-thumb-horizontal"
        />
      </div>
      <div
        className="uui-track-vertical"
        style={
          Object {
            "display": "none",
            "position": "absolute",
            "width": 6,
          }
        }
      >
        <div
          className="uui-thumb-vertical"
        />
      </div>
    </div>
    <div
      className="root modalFooter footer"
      style={Object {}}
    >
      <button
        className="uui-button-box uui-enabled -clickable container root uui-button uui-fill-outline uui-color-secondary uui-size-36"
        onClick={[Function]}
        tabIndex={0}
        type="button"
      >
        <div
          className="uui-caption"
        >
          Discard
        </div>
      </button>
      <button
        className="uui-button-box uui-enabled -clickable container root uui-button uui-fill-solid uui-color-primary uui-size-36"
        onClick={[Function]}
        tabIndex={0}
        type="button"
      >
        <div
          className="uui-caption"
        >
          Save
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`ConfirmationModal should be rendered correctly without body 1`] = `
<div
  className="container modalBlocker"
  style={
    Object {
      "zIndex": 1,
    }
  }
>
  <div
    aria-label="Click to close a modal"
    className="uui-modal-blocker"
    onClick={[Function]}
  />
  <div
    aria-modal={true}
    className="uui-modal-window root modal container"
    role="dialog"
    style={
      Object {
        "height": "auto",
        "maxHeight": "var(--uui-modals-max-height)",
        "width": 420,
      }
    }
  >
    <div
      className="root modalHeader borderBottom"
      style={Object {}}
    >
      <div
        className="uui-modal-title uui-typography"
      >
        Test
      </div>
      <div
        className="flexSpacer"
      />
      <div
        className="flexCell"
        style={
          Object {
            "alignSelf": undefined,
            "flexBasis": "auto",
            "flexGrow": undefined,
            "flexShrink": 0,
            "minWidth": 0,
            "textAlign": undefined,
          }
        }
      >
        <button
          aria-label="Close modal"
          className="uui-button-box uui-enabled -clickable container uui-icon_button uui-color-neutral root"
          onClick={[Function]}
          tabIndex={0}
          type="button"
        >
          <div
            className="container uui-icon uui-enabled"
            style={Object {}}
          >
            <svg
              className=""
            />
          </div>
        </button>
      </div>
    </div>
    <div
      className="root root uui-scroll-bars uui-shadow-top uui-shadow-bottom"
      style={
        Object {
          "display": "flex",
          "height": "100%",
          "overflow": "hidden",
          "position": "relative",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "WebkitOverflowScrolling": "touch",
            "bottom": 0,
            "flex": "1 1 auto",
            "left": 0,
            "marginBottom": 0,
            "marginRight": 0,
            "overflow": "scroll",
            "position": "relative",
            "right": 0,
            "top": 0,
          }
        }
      />
      <div
        className="uui-track-horizontal"
        style={
          Object {
            "display": "none",
            "height": 6,
            "position": "absolute",
          }
        }
      >
        <div
          className="uui-thumb-horizontal"
        />
      </div>
      <div
        className="uui-track-vertical"
        style={
          Object {
            "display": "none",
            "position": "absolute",
            "width": 6,
          }
        }
      >
        <div
          className="uui-thumb-vertical"
        />
      </div>
    </div>
    <div
      className="root modalFooter footer"
      style={Object {}}
    >
      <button
        className="uui-button-box uui-enabled -clickable container root uui-button uui-fill-outline uui-color-secondary uui-size-36"
        onClick={[Function]}
        tabIndex={0}
        type="button"
      >
        <div
          className="uui-caption"
        >
          Discard
        </div>
      </button>
      <button
        className="uui-button-box uui-enabled -clickable container root uui-button uui-fill-solid uui-color-primary uui-size-36"
        onClick={[Function]}
        tabIndex={0}
        type="button"
      >
        <div
          className="uui-caption"
        >
          Save
        </div>
      </button>
    </div>
  </div>
</div>
`;
